--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,7 +10,9 @@
 	<li>java</li>
 	<li>git</li>
 	<li>Master code수정</li>
+	<li>branch2 code 수정1</li>
+	<li>branch2 code 수정2</li>
 </ul>
-<a href="form.jsp"></a>
+<a href="form.jsp">branch1연결</a>
 </body>
 </html>
